# ThatMakesSense

./: .gitmodules  Developer-Setup.md  README.md
src/: CMakeLists.googletest.txt.in  CMakeLists.txt  GameModel.cpp  GameModel.hpp  Level.cpp  Level.hpp  Levels.cpp  Levels.hpp  _clang-format  client.developer.json  client.settings.json  main.cpp
src/UIFramework/: Activate.cpp  Activate.hpp  Element.hpp  KeyboardOption.cpp  KeyboardOption.hpp  MenuItem.cpp  MenuItem.hpp  Selection.cpp  Selection.hpp  Text.cpp  Text.hpp
src/assets/audio/: credit.txt
src/assets/fonts/: credit.txt
src/assets/images/: credit.txt
src/assets/levels/: game.puzzles  levels-unittests.puzzles
src/assets/music/: credit.txt
src/components/: Ability.hpp  AnimatedSprite.hpp  Audio.hpp  Camera.hpp  Challenge.hpp  Component.hpp  Hint.hpp  InputControlled.hpp  Noun.hpp  Object.hpp  PhraseDirection.hpp  Position.hpp  Property.hpp  StaticSprite.hpp  Verb.hpp
src/entities/: Entity.cpp  Entity.hpp  Factory.cpp  Factory.hpp
src/misc/: HexCoord.cpp  HexCoord.hpp  math.cpp  math.hpp  misc.cpp  misc.hpp  sha512.cpp  sha512.hpp
src/services/: Audio.cpp  Audio.hpp  Configuration.cpp  Configuration.hpp  ConfigurationPath.hpp  Content.cpp  Content.hpp  ContentKey.hpp  ControllerInput.cpp  ControllerInput.hpp  KeyboardInput.cpp  KeyboardInput.hpp  MouseInput.cpp  MouseInput.hpp  Scoring.cpp  Scoring.hpp  ThreadPool.cpp  ThreadPool.hpp
src/services/concurrency/: ConcurrentQueue.hpp  ConcurrentTaskGraph.cpp  ConcurrentTaskGraph.hpp  Task.cpp  Task.hpp  WorkerThread.cpp  WorkerThread.hpp
src/systems/: AnimatedSprite.cpp  AnimatedSprite.hpp  Camera.cpp  Camera.hpp  Challenge.cpp  Challenge.hpp  Completion.cpp  Completion.hpp  Hint.cpp  Hint.hpp  Movement.cpp  Movement.hpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RendererChallenge.cpp  RendererChallenge.hpp  RendererHexGrid.cpp  RendererHexGrid.hpp  RendererHexGridAnimatedSprites.cpp  RendererHexGridAnimatedSprites.hpp  RendererHexGridCoords.cpp  RendererHexGridCoords.hpp  RendererHexGridGoalHighlight.cpp  RendererHexGridGoalHighlight.hpp  RendererHexGridHighlight.cpp  RendererHexGridHighlight.hpp  RendererHexGridIHighlight.cpp  RendererHexGridIHighlight.hpp  RendererHexGridOutline.cpp  RendererHexGridOutline.hpp  RendererHexGridPhraseDirection.cpp  RendererHexGridPhraseDirection.hpp  RendererHexGridSendHighlight.cpp  RendererHexGridSendHighlight.hpp  RendererHexGridStaticSprites.cpp  RendererHexGridStaticSprites.hpp  RendererHint.cpp  RendererHint.hpp  RendererParticleSystem.cpp  (+9 more)
src/systems/effects/: BurnEffect.cpp  BurnEffect.hpp  LevelCompletedEffect.cpp  LevelCompletedEffect.hpp  NewPhraseEffect.cpp  NewPhraseEffect.hpp  ParticleEffect.cpp  ParticleEffect.hpp  RuleChangedEffect.cpp  RuleChangedEffect.hpp  SinkEffect.cpp  SinkEffect.hpp
src/systems/parser/: Parser.cpp  Parser.hpp  PhraseSearch.cpp  PhraseSearch.hpp  SemanticParser.cpp  SemanticParser.hpp
src/testing/: TestConcurrentQueue.cpp  TestConcurrentTaskGraph.cpp  TestHex.cpp  TestMain.cpp  TestParser.cpp  TestPhraseSearch.cpp  TestSemanticParse.cpp
src/views/: About.cpp  About.hpp  Credits.cpp  Credits.hpp  Gameplay.cpp  Gameplay.hpp  HelpControls.cpp  HelpControls.hpp  HelpDisplay.cpp  HelpDisplay.hpp  MainMenu.cpp  MainMenu.hpp  MenuView.cpp  MenuView.hpp  Puzzles.cpp  Puzzles.hpp  SettingsControls.cpp  SettingsControls.hpp  SettingsControlsCamera.cpp  SettingsControlsCamera.hpp  SettingsControlsMovement.cpp  SettingsControlsMovement.hpp  SettingsControlsOther.cpp  SettingsControlsOther.hpp  SettingsGraphicsAudio.cpp  SettingsGraphicsAudio.hpp  View.hpp  ViewState.hpp
